feat: improve rich preview media handling